# llmrouter

./: Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  README.md  config.example.toml  config.example.yaml
.github/workflows/: ci.yml  release.yml  tests.yml
benches/: routing.rs
src/: config.rs  gcp_auth.rs  lib.rs  main.rs  metrics.rs  model_map.rs  proxy.rs  router.rs  server.rs  session.rs  tracker.rs
src/config/: tests.rs
src/proxy/: tests.rs
src/server/: tests.rs
tests/: memory_usage.rs  server.rs
tests/common/: mod.rs
