[package]
name = "llmrouter"
version = "2.0.0"
edition = "2021"
authors = ["Danny Boland <danny@boland.dev>"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"] }
http-body-util = "0.1"
http-body = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
bytes = "1"
futures-util = "0.3"
anyhow = "1"
moka = { version = "0.12.15", features = ["sync"] }
shellexpand = { version = "3", default-features = false, features = ["base-0"] }
prometheus = { version = "0.13", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "routing"
harness = false

[profile.release]
lto = true
strip = true
